# sfc

./: .gitignore  customSpec.json  customSpecRaw.json  insertkey_aura.data  insertkey_gran.data  startSF01.sh  startSF02.sh  startSF03.sh  startSF04.sh
pallets/benchmark-demo/: Cargo.toml
pallets/benchmark-demo/src/: benchmarking.rs  lib.rs
pallets/dotprice/: Cargo.toml
pallets/dotprice/src/: lib.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
